@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-23T00:56:00Z",
+  "timestamp" : "2022-06-23T08:17:01Z",
   "count_outdated" : 351,
   "uniques_outdated" : 189,
-  "count" : 377,
+  "count" : 376,
   "uniques" : 204,
   "clones" : [
     {
       "timestamp": "2022-06-09T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
